conceptos básicos y conclusiones acabados

--- a/basicas/resumen.tex
+++ b/basicas/resumen.tex
@@ -2,6 +2,8 @@
 
 %{\bfseries \large [Título extendido del TFG (si procede)] }\vspace{10mm} 
 
+
+\textcolor{orange}{\huge Me falta escribir esto\\}
 {\bfseries \large Resumen:} \vspace{5mm}
 
 
