--- a/biblio.bib
+++ b/biblio.bib
@@ -276,3 +276,69 @@ year = {2016},
 doi = {10.1061/(ASCE)AS.1943-5525.0000607},
 abstract = { The blade element method is an indispensible engineering design tool. It executes rapidly on a personal computer and is capable of accurate propeller performance predictions. An extensive literature survey reveals that for conventional high-aspect ratio propeller blades lifting surface and computational fluid dynamics approaches add a large degree of complexity without providing significantly improved performance prediction capabilities as compared to the blade element/vortex theory. The accuracy of the blade element method is, however, highly dependent on the fidelity of the airfoil aerodynamic model. The primary focus of this paper is on presenting a nonlinear aerodynamic model of airfoils that can be used in combination with the blade element method for enhanced propeller performance prediction over a wide range of advance ratios. The proposed nonlinear airfoil model includes effects of angles of attack up to 90 degrees and compressibility corrections. Results of this method are validated against experimental measurements. Excellent agreement between experiment and prediction is shown for subsonic helical tip Mach numbers. }
 }
+
+
+% La biblia
+@misc{funes2009analisis,
+  title={An{\'a}lisis simplificado de la respuesta estructural de una pala de aerogenerador [en l{\'\i}nea]. Proyecto fin de carrera. Madrid: Universidad Carlos III de Madrid},
+  author={Funes Ruiz, Jos{\'e}-F{\'e}lix},
+  year={2009}
+}
+
+
+%Foto de las partes de la turbina
+@MISC{usgov,
+author = {US. Office of ENERGY EFFICIENCY & RENEWABLE ENERGY},
+title = {The Inside of a Wind Turbine},
+howpublished={\url{https://www.energy.gov/eere/inside-wind-turbine}}
+}
+
+% Viene lo de la primera turbina de la historia
+
+@article{1aturbina,
+author = {Trevor J. Price},
+title ={James Blyth — Britain's First Modern Wind Power Pioneer},
+journal = {Wind Engineering},
+volume = {29},
+number = {3},
+pages = {191-200},
+year = {2005},
+doi = {10.1260/030952405774354921},
+URL = {https://doi.org/10.1260/030952405774354921},
+eprint = { https://doi.org/10.1260/030952405774354921},
+    abstract = { The American, Charles Brush is often credited with being the first person to use a wind powered machine to generate electricity, which operated for the first time during the winter of 1887. However, earlier in July 1887, Professor James Blyth, a Scottish academic of Anderson's College, Glasgow (which later became Strathclyde University) was undertaking very similar experiments to Brush, which culminated in a UK patent in 1891. Likewise the Dane, Poul La Cour, is known to have constructed relatively advanced wind turbines throughout the 1890s, which were also used to generate electricity which was then used to produce hydrogen.This paper investigates Professor Blyth's life, seeking to understand his motivation to generate electricity from the wind and his association with contemporaries, including Lord Kelvin. The paper argues that it was Blyth and not Brush, who was the first to produce wind-powered electricity. }
+}
+
+%Lo del petróleo que impulsó las energías eólicas
+
+@article{1973crisis,
+ ISSN = {01603477},
+ URL = {http://www.jstor.org/stable/4537467},
+ author = {Charles Issawi},
+ journal = {Journal of Post Keynesian Economics},
+ number = {2},
+ pages = {3--26},
+ publisher = {Taylor & Francis, Ltd.},
+ title = {The 1973 Oil Crisis and After},
+ urldate = {2022-06-25},
+ volume = {1},
+ year = {1978}
+}
+
+%la turbina de 40 años danesa
+@MISC{turbinaDanesa,
+author = {Britta Engelbrecht Jensen y Allan Lund Jensen},
+howpublished={\url{https://www.tvindkraft.dk/en/}}
+}
+
+%tipos de pala, figura 17
+
+@unknown{Tesauro2014,
+author = {Tesauro, Angelo and Pavese, Christian and Branner, Kim},
+year = {2014},
+month = {05},
+pages = {},
+title = {Rotor blade online monitoring and fault diagnosis technology research},
+doi = {10.13140/RG.2.2.24457.24161}
+}
+
