--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,7 @@ innertopmargin=\topskip,
 \include{basicas/resumen}
 \tableofcontents
 \include{basicas/introduccion}
+\include{secciones/conceptos_basicos}
 \include{secciones/desarrollo_teorico}
 \include{secciones/Resultados}
 
